@@ -1,6 +1,5 @@
-// This test contains the sample code from the Lock Checker manual chapter
-// modified to fit testing instead of illustrative purposes,
-// and contains other miscellaneous Lock Checker testing.
+// This test contains the sample code from the Lock Checker manual chapter modified to fit testing
+// instead of illustrative purposes, and contains other miscellaneous Lock Checker testing.
 
 import java.util.AbstractCollection;
 import java.util.ArrayList;
@@ -85,13 +84,13 @@ public class ChapterExamples {
     T m;
 
     void test() {
-      // :: error: (method.invocation.invalid)
+      // :: error: (method.invocation)
       m.method();
 
       @GuardedByUnknown MyClass local = new @GuardedByUnknown MyClass();
       // :: error: (lock.not.held)
       local.field = new Object();
-      // :: error: (method.invocation.invalid)
+      // :: error: (method.invocation)
       local.method();
 
       // :: error: (lock.not.held)
@@ -175,10 +174,10 @@ public class ChapterExamples {
     // :: error: (lock.not.held)
     m.field.toString();
     // The following error is due to the fact that you cannot access "this.lock" without first
-    // having acquired "lock".  The right fix in a user scenario would be to not guard "this"
-    // with "this.lock". The current object could instead be guarded by "<self>" or by some
-    // other lock expression that is not one of its fields. We are keeping this test case here
-    // to make sure this scenario issues a warning.
+    // having acquired "lock".  The right fix in a user scenario would be to not guard "this" with
+    // "this.lock". The current object could instead be guarded by "<self>" or by some other lock
+    // expression that is not one of its fields. We are keeping this test case here to make sure
+    // this scenario issues a warning.
     // :: error: (lock.not.held)
     synchronized (lock) {
       myField = new MyClass();
@@ -266,7 +265,7 @@ public class ChapterExamples {
   @GuardedBy("lock") MyClass x = new MyClass();
 
   @GuardedBy("lock") MyClass y = x; // OK, because dereferences of y will require "lock" to be held.
-  // :: error: (assignment.type.incompatible)
+  // :: error: (assignment)
   @GuardedBy({}) MyClass z = x; // ILLEGAL because dereferences of z do not require "lock" to be held.
 
   @LockingFree
@@ -296,7 +295,7 @@ public class ChapterExamples {
   @GuardedBy({"a", "b"}) MyClass y5 = new MyClass();
 
   void myMethod2() {
-    // :: error: (assignment.type.incompatible)
+    // :: error: (assignment)
     y5 = x5; // ILLEGAL
   }
 
@@ -312,9 +311,9 @@ public class ChapterExamples {
   void someMethod() {
     o3 = o2; // OK, since o2 and o3 are guarded by exactly the same lock set.
 
-    // :: error: (assignment.type.incompatible)
+    // :: error: (assignment)
     o1 = o2; // Assignment type incompatible errors are issued for both assignments, since
-    // :: error: (assignment.type.incompatible)
+    // :: error: (assignment)
     o2 = o1; // {"lock"} and {} are not identical sets.
   }
 
@@ -368,10 +367,10 @@ public class ChapterExamples {
     }
     // :: error: (lock.not.held)
     p2.field = new Object();
-    // An error is issued indicating that p2 might be dereferenced without "lock" being held.
-    // The method call need not be modified, since @GuardedBy({}) <: @GuardedByUnknown and
-    // @GuardedBy("lock") <: @GuardedByUnknown, but the lock must be acquired prior to the
-    // method call.
+    // An error is issued indicating that p2 might be dereferenced without "lock" being held.  The
+    // method call need not be modified, since @GuardedBy({}) <: @GuardedByUnknown and
+    // @GuardedBy("lock") <: @GuardedByUnknown, but the lock must be acquired prior to the method
+    // call.
     // :: error: (lock.not.held)
     boolean b2 = compare(p1, p2);
   }
@@ -410,7 +409,7 @@ public class ChapterExamples {
     helper1(e); // OK to pass to another routine without holding the lock.
     // :: error: (lock.not.held)
     e.field = new Object(); // ILLEGAL: the lock is not held
-    // :: error: (contracts.precondition.not.satisfied)
+    // :: error: (contracts.precondition)
     helper2(e);
     // :: error: (lock.not.held)
     helper3(e);
@@ -426,14 +425,16 @@ public class ChapterExamples {
 
   private @GuardedBy({}) MyClass myField;
 
+  int someInt = 1;
+
   // TODO: For now, boxed types are treated as primitive types. This may change in the future.
-  @SuppressWarnings("deprecation") // new Integer
+  @SuppressWarnings({"deprecation", "removal"}) // new Integer
   void unboxing() {
-    int a = 1;
+    int a = someInt;
     // :: error: (immutable.type.guardedby)
     @GuardedBy("lock") Integer c;
     synchronized (lock) {
-      // :: error: (assignment.type.incompatible)
+      // :: error: (assignment)
       c = a;
     }
 
@@ -442,24 +443,19 @@ public class ChapterExamples {
     int d;
     synchronized (lock) {
       d = b;
-
-      // Expected, since b cannot be @GuardedBy("lock") since it is a boxed primitive.
-      // :: error: (method.invocation.invalid)
-      d = b.intValue(); // The de-sugared version does not issue an error.
+      d = b.intValue(); // The de-sugared version
     }
 
-    c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()).
+    c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()).
 
-    // Expected, since b and c cannot be @GuardedBy("lock") since they are boxed primitives.
-    // :: error: (method.invocation.invalid)
     c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+    c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
 
     synchronized (lock) {
-      c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()).
+      c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()).
 
-      // Expected, since b and c cannot be @GuardedBy("lock") since they are boxed primitives.
-      // :: error: (method.invocation.invalid)
       c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+      c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
     }
 
     a = b;
@@ -477,19 +473,19 @@ public class ChapterExamples {
     @GuardedBy("lock") Integer b = 1;
     @GuardedBy({}) int d;
     synchronized(lock) {
-      // TODO re-enable this error (assignment.type.incompatible)
-      d = b; // TODO: This should not result in assignment.type.incompatible because 'b' is actually syntactic sugar for b.intValue().
+      // TODO re-enable this error (assignment)
+      d = b; // TODO: This should not result in assignment because 'b' is actually syntactic sugar for b.intValue().
       d = b.intValue(); // The de-sugared version does not issue an error.
     }
 
     // TODO re-enable this error (lock.not.held)
-    c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()), hence 'lock' must be held.
+    c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()), hence 'lock' must be held.
     // TODO re-enable this error (lock.not.held)
-    c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+    c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
 
     synchronized(lock) {
-      c = c + b; // Syntactic sugar for c = new Integer(c.intValue() + b.intValue()), hence 'lock' must be held.
-      c = new Integer(c.intValue() + b.intValue()); // The de-sugared version
+      c = c + b; // Syntactic sugar for c = Integer.valueOf(c.intValue() + b.intValue()), hence 'lock' must be held.
+      c = Integer.valueOf(c.intValue() + b.intValue()); // The de-sugared version
     }
 
     // TODO re-enable this error (lock.not.held)
@@ -525,9 +521,9 @@ public class ChapterExamples {
     lock2.lock();
     filename = filename.append(extension);
     filename = filename.append(null);
-    // :: error: (assignment.type.incompatible)
+    // :: error: (assignment)
     filename = extension.append(extension);
-    // :: error: (assignment.type.incompatible)
+    // :: error: (assignment)
     filename = extension.append(filename);
   }
 
